SampleDetail rearrangements: - adjusting property fields and adding new info button - fixing top spacing bug with field of Amount fields - make enough space for decoupled checkbox
also:
- fix flaky feature spec

--- a/app/assets/stylesheets/sample.scss
+++ b/app/assets/stylesheets/sample.scss
@@ -83,6 +83,19 @@
     justify-content: space-between;
   }
 
+  .numeric-input-unit_g{
+    margin-top: -15px;
+  }
+
+  .numeric-input-unit_l{
+    margin-top: -15px;
+  }
+
+  .numeric-input-unit_mol{
+    margin-top: -15px;
+  }
+
+
   td {
     padding: 2px 3px 2px 3px !important;
     border-top: none !important;
